--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,10 +27,10 @@ body {
   margin: 0 auto -105px;
 }
 
-footer,
+/* footer,
 .push {
   height: 105px;
-}
+} */
 
 /* Hover Styling */
 #logo:hover,
@@ -50,7 +50,7 @@ nav a:hover {
 /* Container */
 .container {
   width: 100%;
-  max-width: 960px;
+ /* max-width: 960px; */
   margin: 0 auto;
   clear: both;
 }
@@ -109,10 +109,9 @@ h3 {
   color: #ffffff;
   text-align: center;
   text-decoration: none;
-  background: #4aaaa5;
 }
 
-/* My Links */
+/* My Links 
 .links {
   float: right;
   margin-top: 25px;
@@ -130,7 +129,7 @@ h3 {
 
 .links a:first-child {
   border-left: 0 none;
-}
+} */
 
 /* Footer */
 footer {
@@ -140,9 +139,9 @@ footer {
   color: #ffffff;
   color: #cccccc;
   text-align: center;
-  background: #666666;
+  background: #343a40!important;
   border-top: 8px solid #4aaaa5;
-  height: 50px;
+  /*height: 50px; */
 }
 
 h2, h3 {
